source/carehub/main/default/objects/Contact/fields/CommunicationType__c.field-meta.xml
<CustomField>
    <fullName>CommunicationType__c</fullName>
    <label>Mean of Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Video Calling</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>I don&apos;t know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>