source/carehub/main/default/objects/Contact/fields/Financing__c.field-meta.xml
<CustomField>
    <fullName>Financing__c</fullName>
    <label>Financing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WMO</fullName>
            </value>
            <value>
                <fullName>WLZ</fullName>
            </value>
            <value>
                <fullName>ZVV</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>