source/carehub/main/default/objects/Contact/fields/VoIPToken__c.field-meta.xml
<CustomField>
    <fullName>VoIPToken__c</fullName>
    <label>VoIP Token</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>