source/carehub/main/default/objects/Contact/recordTypes/CareCircle.recordType-meta.xml
<RecordType>
    <fullName>CareCircle</fullName>
    <active>true</active>
    <description>Represents a formal or informal contact with a client</description>
    <label>Care Circle</label>
</RecordType>