source/carehub/main/default/objects/Contact/recordTypes/Partner.recordType-meta.xml
<RecordType>
    <fullName>Partner</fullName>
    <active>true</active>
    <description>Represents a B2B portal partner</description>
    <label>Partner</label>
</RecordType>