source/carehub/main/default/objects/Contact/validationRules/CareTeamPhoneIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CareTeamPhoneIsRequired</fullName>
    <active>false</active>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;CareCircle&apos;, ISBLANK( Phone ))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Ensure the phone number of the care circle is filled in.</errorMessage>
</ValidationRule>